force-app/main/default/objects/Facturas__c/Facturas__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Numero de Factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>