force-app/main/default/objects/Facturas__c/fields/Estado_Pago__c.field-meta.xml
<CustomField>
    <fullName>Estado_Pago__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estado Pago</label>
    <type>Checkbox</type>
</CustomField>