force-app/main/default/objects/Facturas__c/fields/Fecha_Venta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Venta__c</fullName>
    <label>Fecha Venta</label>
    <required>true</required>
    <type>Date</type>
</CustomField>