force-app/main/default/objects/Facturas__c/fields/Monto_Factura__c.field-meta.xml
<CustomField>
    <fullName>Monto_Factura__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Monto Factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>